[project]
name = "sergeant"
readme = "README.md"

[tool.isort]
skip_gitignore = true
reverse_relative = true
force_single_line = true
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 1
force_alphabetical_sort_within_sections = true
remove_redundant_aliases = true
src_paths = [
    "sergeant",
    "examples",
    "benchmark",
]
sections = [
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--tb=native",
    "--show-capture=stdout",
    "--show-capture=stderr",
    "--pythonwarnings=all",
]
testpaths = [
    "tests",
]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_equality = true
